--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.66.0",
   "main": "src/main.jsx",
   "scripts": {
-    "build": "cozy-scripts build --build-dir build/drive --barV7 false --cozyClientJs",
-    "watch": "cozy-scripts watch --build-dir build/drive --barV7 false --cozyClientJs",
-    "start": "cozy-scripts start --build-dir build/drive --barV7 false --cozyClientJs",
-    "deploy": "cozy-app-publish --token $REGISTRY_TOKEN --build-dir 'build/drive/' --prepublish downcloud --postpublish mattermost",
+    "build": "cozy-scripts build --barV7 false --cozyClientJs",
+    "watch": "cozy-scripts watch --barV7 false --cozyClientJs",
+    "start": "cozy-scripts start --barV7 false --cozyClientJs",
+    "deploy": "cozy-app-publish --token $REGISTRY_TOKEN --prepublish downcloud --postpublish mattermost",
     "tx": "tx pull --all || true",
     "lint": "npm-run-all --parallel 'lint:*'",
     "lint:styles": "stylint src --config ./node_modules/cozy-scripts/config/.stylintrc",
