--- a/package.json
+++ b/package.json
@@ -85,10 +85,10 @@
     "cozy-logger": "1.9.1",
     "cozy-realtime": "4.6.0",
     "cozy-scanner": "^7.0.1",
-    "cozy-scripts": "^8.1.0",
+    "cozy-scripts": "^8.3.0",
     "cozy-sharing": "10.0.1",
     "cozy-stack-client": "^45.2.0",
-    "cozy-ui": "100.1.0",
+    "cozy-ui": "^101.1.0",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
     "filesize": "3.6.1",
