fix: Type issue comming from new folder structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,12 @@
     "paths": {
       "lib/*": ["./src/lib/*"],
       "modules/*": ["./src/modules/*"],
+      "components/*": ["./src/components/*"],
+      "test/*": ["./test/*"],
+      "hooks/*": ["./src/hooks/*"],
+      "models/*": ["./src/models/*"],
+      "constants/*": ["./src/constants/*"],
+      "config/*": ["./src/config/*"],
     }
   }
 }
