--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "@cozy/minilog": "1.0.0",
     "@egjs/hammerjs": "2.0.17",
     "classnames": "2.3.1",
-    "cozy-bar": "10.0.0",
+    "cozy-bar": "11.0.0-alpha.3",
     "cozy-ci": "0.5.2",
     "cozy-client": "^45.10.0",
     "cozy-client-js": "0.20.0",
