--- a/package.json
+++ b/package.json
@@ -81,7 +81,6 @@
     "worker-loader": "2.0.0"
   },
   "dependencies": {
-    "@cozy/minilog": "1.0.0",
     "@egjs/hammerjs": "2.0.17",
     "classnames": "2.3.1",
     "cozy-bar": "12.2.2",
@@ -95,6 +94,7 @@
     "cozy-intent": "^2.18.0",
     "cozy-keys-lib": "6.0.0",
     "cozy-logger": "1.9.1",
+    "cozy-minilog": "3.3.1",
     "cozy-realtime": "4.6.0",
     "cozy-scripts": "^8.3.0",
     "cozy-sharing": "13.0.0",
