--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "classnames": "2.3.1",
     "cozy-bar": "12.2.3",
     "cozy-ci": "0.5.2",
-    "cozy-client": "^46.2.0",
+    "cozy-client": "47.4.0",
     "cozy-client-js": "0.20.0",
     "cozy-device-helper": "^2.7.0",
     "cozy-doctypes": "1.85.4",
@@ -98,7 +98,7 @@
     "cozy-realtime": "4.6.0",
     "cozy-scripts": "^8.3.0",
     "cozy-sharing": "13.3.0",
-    "cozy-stack-client": "^46.1.0",
+    "cozy-stack-client": "47.4.0",
     "cozy-ui": "^106.1.0",
     "date-fns": "1.30.1",
     "diacritics": "1.3.0",
